# vibe-develop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  commitlint.config.js  go.work  pnpm-workspace.yaml  pyproject.toml  sonar-project.properties
.cursor/rules/: analysis-api.mdc  analysis-web.mdc  doc-conversion.mdc  file-relay.mdc  file-watcher.mdc  monitor-api.mdc  monitor-web.mdc  project-conventions.mdc  service-example-rules.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  sbom.yml  sonarqube.yml
_boilerplate/fastapi/: SPEC.md
_boilerplate/go-wails/: SPEC.md
_boilerplate/react-vite/: SPEC.md
apps/file-relay/: go.mod
apps/file-watcher/: go.mod
deploy/: .env.example  docker-compose.yml
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: default.conf
docs/: overview.md
docs/_templates/: 01-requirements.md  02-screen-spec.md  03-api-contract.md  05-api-spec.md  08-implementation-guide.md  09-test-cases.md  CONTEXT.md  HOTFIX.md
libs/go-common/: go.mod
libs/go-common/logger/: doc.go  logger.go  middleware.go
libs/py-common/logging/: __init__.py  config.py  middleware.py
tools/: extract-doc.py  requirements.txt  start-work.sh  validate-docs.py  workspace-profiles.yaml
